@@ -232,6 +232,9 @@
 #
 # Include the output of diffstat?
 # DEBDIFF_SHOW_DIFFSTAT=no
+#
+# Compare control files in source packages using wdiff?
+# DEBDIFF_WDIFF_SOURCE_CONTROL=no
 
 ##### debi
 # 
