@@ -31,6 +31,8 @@ devscripts (2.10.36) UNRELEASED; urgency=low
   * debcommit: When committing to a bzr repository with a message including
     bug closures, pass corresponding --fixes to bzr. Thanks James Westby for
     the patch. (Closes: #496643)
+  * debdiff: Add an option allowing control files in debian/ in source packages
+    to be compared using wdiff.
   * debsign: When copying .changes files from a remote host, attempt to process
     each copied file if a wildcard was used in the filename (Closes: #491627)
   * nmudiff: Add support for using $DEBFULLNAME as well as $DEBEMAIL when
